--- a/Education.css
+++ b/Education.css
@@ -1,44 +1,300 @@
-.Education{
-    grid-template-columns: repeat(2,1fr);
-    background-color: rgb(223, 223, 223);
-    color:black;
-}
-#Edu_tit {
-    align-content: center;
-    font-size: 45px;
-    font-family: serif;
-    font-style: oblique; 
-    border-right-style: double;
-    padding-left: 55px;
-    padding-right: 78px;
-    border-radius: 100%;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital@0;1&display=swap'); /* font-family: "Montserrat", sans-serif; */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital@0;1&family=Zain:wght@200;300;400;700;800;900&display=swap'); /* font-family: "Zain", sans-serif; */
+
+.education{     /* main div */
+    margin-top: 0.4%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    background: linear-gradient(230deg, rgba(92, 92, 92, 0.303) ,rgba(71, 0, 0, 0.474),rgba(0, 0, 0, 0.2),rgba(77, 45, 0, 0.396),rgba(92, 67, 67, 0.303));
 }
 
-ul.eduacation_content {
+.education_head{    /* education topic contaain div-tag */
+    flex-grow: 1;
+    flex-basis: 10%;
+    align-content: center;
+    text-align: center;
+    border-right-style:double ;
+    border-color: gainsboro;
+}
+
+
+.education_content{     /*  contain ul-tag  */
+    display:flex;
+    flex-direction: column;
+}
+
+#education_content{     /*  contain li-tag  */
+    flex-grow: 1;
     list-style-type: circle;
+    color: white;
+    font-family: "Zain";
 }
-div#course_n {
-    font-size: x-large;
+
+.course1_head, .course2_head{   /* course topic contain div-tag */
+    margin:auto
 }
-.edu_content {
-    margin-left: 58px;
-    font-style: oblique;
-    font-family: serif;
-    padding-right: unset;
-    margin-left: -285px;
+
+.course1_content, .course2_content{     /*course content contain div-tag */
+    margin:auto;
+    padding-inline-start: 7%;
 }
-#col_info {
-    font-size: larger;
-    text-align: start;
-    padding-left: 10%;
+
+#education_hr {  /* hr-tag */
+    margin: 0.3% 0% -0.1% 0%;
 }
-#hsc_info {
-    font-size: larger;
-    text-align: start;
-    padding-left: 10%;
+
+/*---------------------------------------------------------------------------------------------------------------------------------------------*/
+
+@media screen and (width > 2000px) {    /*  4k Screen   */
+
+    .education_content{     /* education content */
+        flex-grow: 2;
+        flex-basis: 18.5%;
+        margin: auto;
+        padding: 0% 5% 0% 3%;
+    }
+    
+    #education_head{    /* contain para-tag */
+        color:white;
+        font-family: "Montserrat";
+        font-weight: 500;
+        font-variant-caps: small-caps;
+        letter-spacing: 1mm;
+        font-size: 75px;
+        margin: auto;
+        height:fit-content;
+        position: relative;
+    }
+
+    #course1_head, #course2_head{   /*course topic contain para-tag */
+        font-size: 52px;
+        margin: auto;
+        font-weight: 400;
+        letter-spacing: 0.6mm;
+    }
+
+    #course1_content, #course2_content{     /*course content contain para-tag */
+        font-size: xxx-large;
+        font-weight: 300;
+        letter-spacing: 0.25mm;
+    }
+
+    #education_content::marker{
+        font-size: 35px;
+        color: white;
+    }
+
 }
-#hr_edu {
-    margin-top: -1px;
-    margin-bottom: 1px;
-    padding-bottom: 1px;
+
+/*---------------------------------------------------------------------------------------------------------------------------------------------*/
+
+@media screen and (width >= 1024px ) and (width < 2000px) {    /*  lap l screen  */
+
+    .education_content{     /* education content */
+        flex-grow: 2;
+        flex-basis: 18.5%;
+        margin: auto;
+        padding: 0% 5% 0% 3%;
+    }
+
+    #education_head{    /* contain para-tag */
+        color: white;
+        font-family: "Montserrat";
+        font-weight: 500;
+        font-variant-caps: small-caps;
+        letter-spacing: 1mm;
+        font-size: xxx-large;
+        margin: auto;
+        height:fit-content;
+        position: relative;
+    }
+
+    #course1_head, #course2_head{   /*course topic contain para-tag */
+        font-size: x-large;
+        margin: auto;
+        font-weight: 400;
+        letter-spacing: 0.6mm;
+    }
+
+    #course1_content, #course2_content{     /*course content contain para-tag */
+        font-size: larger;
+        font-weight: 300;
+        letter-spacing: 0.25mm;
+    }
+
+    #education_content::marker{
+        font-size: 20px;
+        color: white;
+    }
+    
+}
+
+/*---------------------------------------------------------------------------------------------------------------------------------------------*/
+
+@media screen and (width >= 768px ) and (width < 1024px) {    /*  lap s screen  */
+
+    .education_content{     /* education content */
+        flex-grow: 2;
+        flex-basis: 21.5%;
+        margin: auto;
+    }
+
+    #education_head{    /* contain para-tag */
+        color: white;
+        font-family: "Montserrat";
+        font-weight: 500;
+        font-variant-caps: small-caps;
+        letter-spacing: 1mm;
+        font-size: xx-large;
+        margin: auto;
+        height:fit-content;
+        position: relative;
+    }
+
+    #course1_head, #course2_head{   /*course topic contain para-tag */
+        font-size: x-large;
+        margin: auto;
+        font-weight: 400;
+        letter-spacing: 0.6mm;
+    }
+
+    #course1_content, #course2_content{     /*course content contain para-tag */
+        font-size: larger;
+        font-weight: 300;
+        letter-spacing: 0.25mm;
+    }
+
+    #education_content::marker{
+        font-size: 20px;
+        color: white;
+    }
+    
+}
+
+/*---------------------------------------------------------------------------------------------------------------------------------------------*/
+
+@media screen and (width >= 500px ) and (width < 768px) {    /*  tab screen  */
+
+    .education{     /* main div */
+        margin-top: 0.4%;
+        padding-top: 2%;
+        padding-bottom: 2%;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        background: linear-gradient(230deg, rgba(92, 92, 92, 0.303) ,rgba(71, 0, 0, 0.474),rgba(0, 0, 0, 0.2),rgba(77, 45, 0, 0.396),rgba(92, 67, 67, 0.303));-color: rgba(95, 95, 95, 0.342);
+    }
+
+    .education_content{     /* education content */
+        flex-grow: 2;
+        flex-basis: 19%;
+        margin: auto;
+    }
+
+    .education_head{    /* education topic contaain div-tag */
+        flex-grow: 1;
+        flex-basis: 10%;
+        align-content: center;
+        text-align: center;
+        border-right-style:double ;
+        border-color: gainsboro;
+    }
+
+    #education_head{    /* contain para-tag */
+        color: white;
+        font-family: "Montserrat";
+        font-weight: 500;
+        font-variant-caps: small-caps;
+        letter-spacing: 0.5mm;
+        font-size: large;
+        height:fit-content;
+        position: relative;
+    }
+
+    #course1_head, #course2_head{   /*course topic contain para-tag */
+        font-size: larger;
+        margin: auto;
+        font-weight: 400;
+        letter-spacing: 0.3mm;
+    }
+
+    #course1_content, #course2_content{     /*course content contain para-tag */
+        font-size: large;
+        font-weight: 300;
+        letter-spacing: 0.3mm;
+    }
+
+    #education_content::marker{
+        font-size: 20px;
+        color: white;
+    }
+    
+}
+
+/*---------------------------------------------------------------------------------------------------------------------------------------------*/
+
+@media screen and (width < 500px) {    /*  mobile screen  */
+
+    .education{     /* main div */
+        margin-top: 0.4%;
+        padding-top: 2%;
+        padding-bottom: 2%;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        background: linear-gradient(230deg, rgba(92, 92, 92, 0.303) ,rgba(71, 0, 0, 0.474),rgba(0, 0, 0, 0.2),rgba(77, 45, 0, 0.396),rgba(92, 67, 67, 0.303));-color: rgba(95, 95, 95, 0.342);
+    }
+
+    .education_content{     /* education content */
+        margin: auto;
+    }
+
+    .education_content{     /*  contain ul-tag  */
+        display:flex;
+        flex-direction: column;
+        padding: 0% 0% 0% 8%;
+    }
+
+    .education_head{    /* education topic contaain div-tag */
+        flex-grow: 1;
+        flex-basis: 10%;
+        text-align: left;
+        border-right-style:none ;
+        padding: 0% 0% 0% 0%;
+    }
+
+    #education_head{    /* contain para-tag */
+        color: white;
+        font-family: "Montserrat";
+        font-weight: 500;
+        font-variant-caps: small-caps;
+        letter-spacing: 0.5mm;
+        font-size: large;
+        height:fit-content;
+        position: relative;
+        padding: 0% 0% 0% 2%;
+    }
+
+    #course1_head, #course2_head{   /*course topic contain para-tag */
+        font-size: large;
+        margin: auto;
+        font-weight: 400;
+        letter-spacing: 0.3mm;
+    }
+
+    #course1_content, #course2_content{     /*course content contain para-tag */
+        font-size: medium;
+        font-weight: 300;
+        letter-spacing: 0.3mm;
+        text-align: left;
+    }
+
+    #education_content::marker{
+        font-size: 15px;
+        color: white;
+    }
+    
 }
