--- a/Navigation_menu.css
+++ b/Navigation_menu.css
@@ -1,39 +1,168 @@
-.menu_bar{
-    background-color: rgb(223, 223, 223);
-    margin-bottom:-15px;
-    margin-top:-13px;
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital@0;1&display=swap');   /* font-family: "Roboto Mono", monospace; */
+
+@media screen and (width < 700px) {   /* for mobile veiw */
+
+    body {
+        margin-top: -4%;
+        margin-left: 1%;
+        margin-right: 1%;
+    }
+    
+
+    .menu_bar{  /*  main div */
+        background: radial-gradient(ellipse at left, #79000067, transparent),
+            radial-gradient(ellipse at bottom, #58330076, transparent);
+    }
+
+    .menu_items{     /* ol-tag */
+        display: flex;
+        flex-direction: column;
+        flex-wrap:wrap;
+        list-style-type: none;
+        justify-content: center;
+        align-content: center;
+    }
+
+    .menu_li{       /* li-tag */
+        text-align: center;
+        margin: 1.5% 1%;
+        padding: 0.9% 6%;
+    }
+
+    .m_link{      /* a-tag */
+        text-decoration: none;
+        color: rgb(255, 255, 255);
+        font-family: "Roboto Mono", monospace;
+        font-weight: 500;
+        font-size: medium;
+        font-style: oblique;
+        font-variant-caps: petite-caps;
+        letter-spacing: 1mm;
+        padding: 4% 10% 4% 10%;
+    }
+
+    #menu_hr {  /* hr-tag */
+        margin: 0.3% 0% -0.1% 0%;
+    }
+    
+    .m_link:hover{
+        color: rgb(255, 255, 255);
+        border: rgba(255, 255, 255, 0.648) solid 1px;
+        font-size: larger;
+    }
 }
-.menu_items {
-    list-style-type: none;
-    display: flex;
-    flex-wrap: nowrap;
-    padding: 15px;
-    align-content: space-between;
-    justify-content: flex-end;
-    font-style: oblique;
-    font-family: cursive;
+
+/*----------------------------------------------------------------------------------------------------------------------------------------------*/
+
+@media all and (width >= 700px) and (width <= 1600px) {  /* for laptop screen and tablet */
+
+    body {
+        margin-top: -0.7%;
+        margin-left: 0.5%;
+        margin-right: 0.5%;
+    }
+
+    .menu_bar{  /*  main div */
+        background: radial-gradient(ellipse at right, #7900003e, transparent),
+        radial-gradient(ellipse at top, #13000000, transparent),
+            radial-gradient(ellipse at left, #00283659, transparent);
+    }
+    
+    .menu_items{     /* ol-tag */
+        display: flex;
+        flex-direction: row;
+        flex-wrap:wrap;
+        list-style-type: none;
+        justify-content: end;
+    }
+    
+    .menu_li{       /* li-tag */
+        text-align: center;
+        margin:0.5% 0.5%;
+        padding:0.8% 0.3%;
+        
+    }
+    
+    .m_link{      /* a-tag */
+        text-decoration: none;
+        color: rgb(255, 255, 255);
+        font-family: "Roboto Mono", monospace;
+        font-weight: 800;
+        font-size: medium;
+        font-style: oblique;
+        font-variant-caps: petite-caps;
+        letter-spacing: 1mm;
+        padding: 10px 25px;
+        
+    }
+
+    #menu_hr {  /* hr-tag */
+        margin: 0.3% 0%;
+    }
+
+    .m_link:hover{
+        color: rgb(0, 2, 48);
+        background-color: rgba(255, 255, 255, 0.648);
+        border-radius: 0% 35% 0% 35%;
+        font-size: medium;
+    }
+
 }
-#link{
-    color: black;
-    text-decoration: none;
-    margin: 20px;
+.menu_items{
+    margin:auto;
+    margin-top: 1%;
 }
-#links,.menu_items *{
-    display:inline;
-    padding-left: 10px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-right: 10px;
-    margin-left: -7px;
-    margin-right: 5px;
-    border-top-right-radius: 35%;
-    border-bottom-left-radius: 35%;
-}
-#menu_hr{
-    margin-top: -15px;
-    margin-bottom: 1px;
-}
-#link:hover{
-    background-color: black;
-    color:whitesmoke;
+
+/*-----------------------------------------------------------------------------------------------------------------------------------------------*/
+
+@media screen and (width > 1600px)  /* 4K screen */
+{
+    body {
+        margin-top: -0.7%;
+        margin-left: 0.5%;
+        margin-right: 0.5%;
+    }
+
+    .menu_bar{  /*  main div */
+        background-color:rgba(95, 95, 95, 0.342);
+    }
+    
+    .menu_items{     /* ol-tag */
+        display: flex;
+        flex-direction: row;
+        flex-wrap:wrap;
+        list-style-type: none;
+        justify-content: end;
+    }
+    
+    .menu_li{       /* li-tag */
+        text-align: center;
+        margin:0.5% 0.5%;
+        padding:0.8% 0.3%;
+        
+    }
+    
+    .m_link{      /* a-tag */
+        text-decoration: none;
+        color: rgb(255, 255, 255);
+        font-family: "Roboto Mono", monospace;
+        font-weight: 800;
+        font-size: xx-large;
+        font-style: oblique;
+        font-variant-caps: petite-caps;
+        letter-spacing: 1.5mm;
+        padding: 10px 25px;
+        
+    }
+
+    #menu_hr {  /* hr-tag */
+        margin: 0.3% 0%;
+    }
+
+    .m_link:hover{
+        color: rgb(0, 2, 48);
+        background-color: rgba(255, 255, 255, 0.648);
+        border-radius: 0% 35% 0% 35%;
+        font-size: xx-large;
+    }
 }
