--- a/skills.css
+++ b/skills.css
@@ -1,51 +1,262 @@
-.Skills
-{
-    grid-template-columns: 25% 75%;
-    background-color: rgb(223, 223, 223);
-    color:black;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital@0;1&display=swap'); /* font-family: "Montserrat", sans-serif; */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital@0;1&family=Zain:wght@200;300;400;700;800;900&display=swap'); /* font-family: "Zain", sans-serif; */
+
+.skills{    /*maain div */
+    margin-top: 0.4%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    display:flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    color:white;
+    background: linear-gradient(30deg, rgba(89, 88, 88, 0.303) ,rgba(71, 0, 0, 0.474),rgba(0, 0, 0, 0.2),rgba(77, 45, 0, 0.396),rgba(97, 97, 97, 0.303));
 }
-.skill_tit {
-    margin-right: -1%;
-    margin-left: 8%;
+
+.skills_head{   /* contain skill Heading */
+    flex-grow: 1;
+    flex-basis: 25%;
     align-content: center;
-    font-size: 45px;
-    font-family: serif;
-    font-style: oblique;
-    border-right-style: double;
-    border-radius: 100%;
     text-align: center;
+    font-family:"Montserrat";
+    font-size: xxx-large;
+    font-variant-caps: small-caps;
+    font-weight: 500;
+    letter-spacing:1vh;
+    border-right-style: double;
+    border-color: gainsboro;
 }
-#sk_head {
+
+.skills_content{    /* Contain list of skills and sub div */
+    flex-grow: 2;
+    flex-basis: 53%;
     display: grid;
-    grid-template-rows: repeat(2,1fr);
-    grid-template-columns: repeat(2,1fr);
-    grid-auto-flow: column;
-    grid-column: 50%;
-    align-items: start;
+    grid-template-columns: auto auto;
+    font-family: "Zain";
+    align-items: center;
+    padding-left: 3%;
 }
-.sc{
-    font-style: oblique;
-    font-family: serif;
-    font-size: larger;
+
+.skl_list{  /* contain the different skills div */
+    display:flex;
+    flex-wrap: wrap;
+    flex-direction:column ;
+    list-style-type:circle ;
 }
-.sh{
-    font-style: oblique;
-    font-family: serif;
-    font-size: x-large;
+
+#skill_hr {  /* hr-tag */
+    margin: 0.3% 0% -0.1% 0%;
 }
-#skill_set {
-    padding-left: 8%;
+
+/*--------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+@media screen and (width >= 2000px) {    /*  4k screen   */
+
+    .skills_head{   /* contain skill Heading */
+        flex-grow: 1;
+        flex-basis: 24.8%;
+        align-content: center;
+        text-align: center;
+        font-family:"Montserrat";
+        font-size: 75px;
+        font-variant-caps: small-caps;
+        font-weight: 500;
+        letter-spacing:1vh;
+        border-right-style: double;
+        border-color: gainsboro;
+    }
+  
+    .skl_head{  /* skill topic */
+        font-size:xxx-large;
+        flex-grow:1;
+        letter-spacing: 0.6mm;
+    }
+
+    .skl_cont{   /*  skill contents contain list of skill items */
+        font-size:xx-large;
+        letter-spacing: 0.3mm;
+        flex-grow: 1;;
+        padding-left:10% ;
+    }
+
 }
-#sk_cont {
-    list-style-type: disc;
+
+/*--------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+@media screen and (width >= 1024px) and (width < 2000px) {    /*  lap l screen   */
+
+    .skills_head{   /* contain skill Heading */
+        flex-grow: 1;
+        flex-basis: 24.8%;
+        align-content: center;
+        text-align: center;
+        font-family:"Montserrat";
+        font-size: xxx-large;
+        font-variant-caps: small-caps;
+        font-weight: 500;
+        letter-spacing:1mm;
+        border-right-style: double;
+        border-color: gainsboro;
+    }
+  
+    .skl_head{  /* skill topic */
+        font-size:x-large;
+        flex-grow:1;
+        letter-spacing: 0.6mm;
+    }
+
+    .skl_cont{   /*  skill contents contain list of skill items */
+        font-size:larger;
+        letter-spacing: 0.3mm;
+        flex-grow: 1;;
+        padding-left:10% ;
+        font-weight: 300;
+    }
+
 }
-#sk_head {
-    list-style-type: circle;
+
+/*--------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+@media screen and (width >= 768px) and (width < 1024px) {    /*  lap s screen   */
+
+    .skills_head{   /* contain skill Heading */
+        flex-grow: 1;
+        flex-basis: 24.8%;
+        align-content: center;
+        text-align: center;
+        font-family:"Montserrat";
+        font-size: xx-large;
+        font-variant-caps: small-caps;
+        font-weight: 500;
+        letter-spacing:1mm;
+        border-right-style: double;
+        border-color: gainsboro;
+    }
+  
+    .skl_head{  /* skill topic */
+        font-size:x-large;
+        flex-grow:1;
+        letter-spacing: 0.6mm;
+    }
+
+    .skl_cont{   /*  skill contents contain list of skill items */
+        font-size:larger;
+        letter-spacing: 0.3mm;
+        flex-grow: 1;;
+        padding-left:10% ;
+    }
+
 }
-#skill_title {
-    margin-right: 25%;
+
+/*--------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+@media screen and (width >= 768px) and (width < 1024px) {    /*  lap s screen   */
+
+    .skills_head{   /* contain skill Heading */
+        flex-grow: 1;
+        flex-basis: 24.8%;
+        align-content: center;
+        text-align: center;
+        font-family:"Montserrat";
+        font-size: xx-large;
+        font-variant-caps: small-caps;
+        font-weight: 500;
+        letter-spacing:1mm;
+        border-right-style: double;
+        border-color: gainsboro;
+    }
+  
+    .skl_head{  /* skill topic */
+        font-size:x-large;
+        flex-grow:1;
+        letter-spacing: 0.6mm;
+    }
+
+    .skl_cont{   /*  skill contents contain list of skill items */
+        font-size:larger;
+        letter-spacing: 0.3mm;
+        flex-grow: 1;
+        padding-left:10% ;
+        font-weight: 300;
+    }
+
 }
-#skill_hr {
-    margin-top: 1px;
-    margin-bottom: 1px;
+
+/*--------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+@media screen and (width >= 500px) and (width < 768px) {    /*  tab screen   */
+
+    .skills_head{   /* contain skill Heading */
+        flex-grow: 1;
+        flex-basis: 24.8%;
+        align-content: center;
+        text-align: center;
+        font-family:"Montserrat";
+        font-size: large;
+        font-variant-caps: small-caps;
+        font-weight: 500;
+        letter-spacing: 0.5mm;
+        border-right-style: double;
+        border-color: gainsboro;
+    }
+  
+    .skl_head{  /* skill topic */
+        font-size: medium;
+        flex-grow:1;
+        letter-spacing: 0.3mm;
+    }
+
+    .skl_cont{   /*  skill contents contain list of skill items */
+        font-size:13px;
+        letter-spacing: 0.2mm;
+        flex-grow: 1;
+        padding-left:10% ;
+        font-weight: 300;
+    }
+
+}
+
+/*--------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+@media screen and (width < 500px) {    /*  mobile screen   */
+
+    .skills{    /*maain div */
+        margin-top: 0.4%;
+        padding-top: 4%;
+        padding-bottom: 2%;
+        display:flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        color:white;
+        background: linear-gradient(30deg, rgba(89, 88, 88, 0.303) ,rgba(71, 0, 0, 0.474),rgba(0, 0, 0, 0.2),rgba(77, 45, 0, 0.396),rgba(97, 97, 97, 0.303));
+    }
+
+    .skills_head{   /* contain skill Heading */
+        padding: 0% 0% 4% 2.5%;
+        flex-grow: 1;
+        flex-basis: 24.8%;
+        align-content: left;
+        text-align: left;
+        font-family:"Montserrat";
+        font-size: large;
+        font-variant-caps: small-caps;
+        font-weight: 500;
+        letter-spacing: 0.5mm;
+        border-right-style: none;
+        border-color: rgba(220, 220, 220, 0);
+    }
+  
+    .skl_head{  /* skill topic */
+        font-size: medium;
+        flex-grow:1;
+        letter-spacing: 0.3mm;
+    }
+
+    .skl_cont{   /*  skill contents contain list of skill items */
+        font-size:13px;
+        letter-spacing: 0.2mm;
+        flex-grow: 1;
+        padding-left:10% ;
+        font-weight: 300;
+    }
+
 }
